This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-04-21 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/config-win32.h: added mode_t typedef.

2002-04-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* tests/Clock.cpp: test for i386 architecture on linux (patch #541608)

2002-04-04 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.3.1

	* src/Category.cpp: fix previous fix for bug #527467.

	* m4/PETI_PEDANTIC_GCC.m4: add -Wno-unused to g++ options.

	* configure.in: increment version to 0.3.1.

	* msvc6/log4cpp/log4cpp.dsp: Added RollingFileAppender and threading
	files.
	* bcb5/log4cpp/log4cpp.bpf, bcb5/log4cpp/log4cpp.bpr,
	bcb5/log4cpp/log4cpp.mak: Added RollingFileAppender
	
2002-03-31 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/Portability.hh: Disable exception specifier
	warnings (issue #536668)

2002-03-27 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* m4/AC_C_INT64_T.m4: #include <stdint.h> and remove $GCC check.
	* src/PatternLayout.cpp: #include <stdint.h>

	* configure.in, include/log4cpp/Portability.hh: back out strcasecmp() 
	stuff.
	
2002-03-22 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/FileAppender.hh, src/FileAppender.cpp:
	added 'append' and 'mode' options. 

	* include/log4cpp/RollingFileAppender.hh, include/log4cpp/Makefile.am,
	src/RollingFileAppender.cpp, src/SimpleConfigurator.cpp,
	src/Makefile.am: added RollingFileAppender contributed by
	Paulo Pizarro <paulo.pizarro@digitro.com.br>
	
2002-03-20 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/SimpleConfigurator.hh, src/SimpleConfigurator.cpp:
	added configure(std::istream&) method. (feature request #527760)

	* src/Log4cppCleanup.cpp: set variable to NULL after delete. 
	(feature request #527393)

	* include/log4cp/Category.hh, include/log4cpp/FixedContextCategory.hh,